# python-template

./: .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
.github/workflows/: coverage.yml  publish.yml
tests/: test_meta.py  test_python_template.py
