[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["ionite34 <dev@ionite.io>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
mypy = "^0.961"
pylint = "^2.14.4"
black = "^22.6.0"
tox = "^3.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
